// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-26l3h8 > div,
[data-css-26l3h8] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: green;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-26l3h8 > div:nth-child(2n-1),
[data-css-26l3h8] > div:nth-child(2n-1) {
  animation-delay: -0.35s;
  -webkit-animation-delay: -0.35s;
}

<LineScaleParty
  loading={true}
>
  <div
    data-css-26l3h8=""
  >
    <div />
    <div />
    <div />
  </div>
</LineScaleParty>
`;

exports[`enzyme.render 1`] = `
.css-26l3h8 > div,
[data-css-26l3h8] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: green;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-26l3h8 > div:nth-child(2n-1),
[data-css-26l3h8] > div:nth-child(2n-1) {
  animation-delay: -0.35s;
  -webkit-animation-delay: -0.35s;
}

<div
  data-css-26l3h8=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-26l3h8 > div,
[data-css-26l3h8] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: green;
  animation-fill-mode: both;
  animation: animation_1twcfwm 0.7s 0s infinite linear;
  display: inline-block;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_1twcfwm 0.7s 0s infinite linear;
}

.css-26l3h8 > div:nth-child(2n-1),
[data-css-26l3h8] > div:nth-child(2n-1) {
  animation-delay: -0.35s;
  -webkit-animation-delay: -0.35s;
}

<div
  data-css-26l3h8=""
>
  <div />
  <div />
  <div />
</div>
`;
